GNU myserver NEWS                                    -*- outline -*-

* Noteworthy changes in release X.Y.Z

* Noteworthy changes in release 0.11

** Bug fixes

   Cope correctly with CGI payloads if the return code is not 2xx.

   Detect correctly the last existing component before PATH_INFO.

   The proxy handler doesn't use the chunked transfer encoding when the
   content-length is known, both methods were used at the same time.

** New features

   Support UTF-8 encoded URLs.

* Noteworthy changes in release 0.10

** Bug fixes

  Fix a segfault when the same log is shared by different virtual hosts.

  Improved logging system, now more detailed error messages are provided.

  Fix some tests when the test suite is executed under a chroot.

  Fix some portability problems under FreeBSD systems.

  Handle properly HTTP/1.0 requests without a "Host" header.

  Use the chunked transfer encoding only with HTTP/1.1 clients.

  The build doesn't fail if zlib is not found.

** New features

   The PROXY handler now maintains a pool of keep-alive connections to reuse.

   Web-based Distributed Authoring and Versioning (WebDAV) support.

   Possibility to change response header values from the local configuration
   files.

* Noteworthy changes in release 0.9.2

** Bug fixes

  Vulnerability fix for CVE-2009-4029[1].

  Sockets operations under Windows are now done using gnulib.

  Fix the X-Sendfile directive when using keep-alive connections.

* Noteworthy changes in release 0.9.1

** New features

  A GUI written in python to easily manage the server.

  Gnulib usage.

  Support for the Gopher protocol.

  gettext i18n.

  X-Sendfile directive for FastCGI.

  Support for crypted passwords in the security files.

========================================================================

Copyright (C) 2008, 2009, 2010, 2011 Free Software Foundation, Inc.

Permission is granted to copy, distribute and/or modify this document