@@ -2,6 +2,10 @@ GNU myserver NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release X.Y.Z
 
+** New features
+
+   Allow to disable the TCP Nagle algorithm.
+
 * Noteworthy changes in release 0.11
 
 ** Bug fixes
